# WC-Notice

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/docker/: Dockerfile.aarch64  Dockerfile.armv7
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  engine.rs  main.rs  notifier.rs  schedule.rs  tray.rs
