[package]
name = "wc_notice"
version = "0.1.0"
edition = "2024"
authors = ["510myRday <510myRday@bpiao.online>"]
description = "铃声提醒工具 - Bell Reminder"
license = "MIT"
repository = "https://github.com/yourname/wc_notice"
readme = "README.md"
keywords = ["bell", "reminder", "schedule", "tray", "desktop"]
categories = ["command-line-utilities"]

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rodio = { version = "0.20", default-features = false, features = ["wav", "mp3"] }
notify-rust = "4"
dirs = "6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"

# tray-icon 在 Windows/Linux/macOS 上均支持托盘功能
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
tray-icon = "0.21.3"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
